--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/pfp.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link
    href="https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap"
@@ -14,7 +14,7 @@
    href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
    rel="stylesheet"
   />
-  <title>Zee's Portfolio</title>
+  <title>My Portfolio</title>
  </head>
  <body>
   <div id="root"></div>
